--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,14 @@ html {
 
 body {
   margin: 0;
+  padding-bottom: 20px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   color: #212121;
   background-color: #fff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
 }
 
 img {
@@ -128,7 +130,7 @@ img {
   grid-gap: 16px;
   margin-top: 0;
   margin-bottom: 0;
-  padding: 0;
+  padding: 10px;
   list-style: none;
   margin-left: auto;
   margin-right: auto;
@@ -172,9 +174,10 @@ img {
   z-index: 1200;
 }
 
-.Modal {
-  max-width: calc(100vw - 48px);
-  max-height: calc(100vh - 24px);
+.Modal img {
+  max-width: 90vw;
+  max-height: 90vh;
+  border-radius: 5px;
 }
 
 /*
@@ -182,7 +185,7 @@ img {
 */
 .Button {
   padding: 8px 16px;
-  border-radius: 2px;
+  border-radius: 5px;
   background-color: #3f51b5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
@@ -204,4 +207,11 @@ img {
 .Button:hover,
 .Button:focus {
   background-color: #303f9f;
+}
+
+.Loader {
+  display: flex;
+  height: calc(100vh - 72px);
+  align-items: center;
+  justify-content: center;
 }
